[gd_scene load_steps=24 format=2]

[ext_resource path="res://ressources/img/character/jet-pack/blue_jp.png" type="Texture" id=1]
[ext_resource path="res://ressources/script/character/character.gd" type="Script" id=2]
[ext_resource path="res://ressources/img/character/skin/tile_set_pink_body.png" type="Texture" id=3]
[ext_resource path="res://ressources/img/character/skin/tile_set_pink_front_arms.png" type="Texture" id=4]
[ext_resource path="res://ressources/img/character/skin/tile_set_pink_back_arms.png" type="Texture" id=5]
[ext_resource path="res://ressources/img/character/jet-pack/jp_flamme.png" type="Texture" id=6]
[ext_resource path="res://ressources/img/effects/jet-pack/j0.png" type="Texture" id=7]
[ext_resource path="res://ressources/sound/character/jp/run.mp3" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 13 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 13, 14 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("front_arm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=13]
resource_name = "fall"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("front_arm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("front_arm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "jet_pack"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("front_arm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=12]
resource_name = "jump"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("front_arm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 13, 14 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("front_arm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("back_arm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("back_arm:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "walk"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("back_arm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.4, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 2, 3, 4, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("back_arm:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}

[sub_resource type="OccluderPolygon2D" id=15]
polygon = PoolVector2Array( -9, 8, -1, 8, -1, -4, -9, -4 )

[node name="player_character" type="KinematicBody2D"]
collision_layer = 4096
collision_mask = 505
script = ExtResource( 2 )

[node name="collision_shape_2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="raycast_2D" type="RayCast2D" parent="."]
visible = false
rotation = 3.14159
scale = Vector2( 2, 0.3 )
enabled = true
collision_mask = 48
collide_with_areas = true

[node name="sound" type="Node2D" parent="."]
visible = false

[node name="postiion2D_muzzle" type="Position2D" parent="."]
visible = false
position = Vector2( 7, 0 )

[node name="skin" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 5
vframes = 5

[node name="front_arm" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 5
vframes = 6
frame = 2

[node name="back_arm" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )
hframes = 2
vframes = 3
frame = 2

[node name="anim_player" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fall = SubResource( 3 )
anims/idle = SubResource( 6 )
anims/jump = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="anim_front_arm" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/fall = SubResource( 13 )
anims/idle = SubResource( 9 )
anims/jet_pack = SubResource( 14 )
anims/jump = SubResource( 12 )
anims/walk = SubResource( 7 )

[node name="anim_back_arm" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/walk = SubResource( 11 )

[node name="jet_pack" type="Node2D" parent="."]

[node name="sprite_jet_pack" type="Sprite" parent="jet_pack"]
texture = ExtResource( 1 )

[node name="sprite_flame" type="Sprite" parent="jet_pack"]
position = Vector2( -4, 10 )
texture = ExtResource( 6 )
hframes = 2
vframes = 2

[node name="light2D" type="Light2D" parent="jet_pack"]
position = Vector2( -4, 10 )
texture = ExtResource( 7 )
texture_scale = 1.02
color = Color( 0.988235, 0.929412, 0.443137, 1 )
energy = 2.27
mode = 2

[node name="LightOccluder2D" type="LightOccluder2D" parent="jet_pack"]
light_mask = 9
occluder = SubResource( 15 )
light_mask = 9

[node name="audiostreamplayer2D_jet_pack" type="AudioStreamPlayer" parent="jet_pack"]
stream = ExtResource( 8 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 6 )
